--- a/res/res.qrc
+++ b/res/res.qrc
@@ -1,5 +1,18 @@
 <RCC>
     <qresource prefix="/">
-        <file>icon.png</file>
+        <file alias="CREDITS.md">../CREDITS.md</file>
+
+        <file>icons/warning.png</file>
+
+        <file>shaders/chamber.frag</file>
+        <file>shaders/chamber.vert</file>
+        <file>shaders/mdl.vert</file>
+        <file>shaders/mdl_shaded_textured.frag</file>
+        <file>shaders/mdl_shaded_untextured.frag</file>
+        <file>shaders/mdl_unshaded_textured.frag</file>
+        <file>shaders/mdl_wireframe.frag</file>
+
+        <file>textures/checkerboard.png</file>
+        <file>textures/default_matcap.png</file>
     </qresource>
 </RCC>
